--- a/RealEstate/css/style.css
+++ b/RealEstate/css/style.css
@@ -1,5 +1,6 @@
+@charset "UTF-8";
 html {
-  font-family: 'YuMincho', 'Yu Mincho', serif;
+  font-family: "游明朝体", "Yu Mincho", serif;
   font-size: 10px;
 }
 
@@ -65,8 +66,51 @@ a {
           writing-mode: vertical-rl;
 }
 
-.bg-primary {
+.bg-light-green {
   background-color: rgba(77, 150, 0, 0.1);
+}
+
+.bg-green {
+  background-color: #4d9600;
+  color: #fff;
+}
+
+.section-title {
+  color: #4d9600;
+  font-size: 2.8rem;
+  line-height: 1.1;
+  letter-spacing: 0.35em;
+  text-align: center;
+  margin-left: 7px;
+}
+
+.section-sub-title {
+  text-align: center;
+  font-size: 2rem;
+  font-weight: 200;
+  letter-spacing: 0.3em;
+  margin-top: 4px;
+  margin-left: 5px;
+  line-height: 1.65;
+}
+
+.wrapper {
+  margin: 0 30px;
+}
+
+@media screen and (min-width: 600px) {
+  .wrapper {
+    max-width: 1080px;
+    padding: 0 50px;
+  }
+}
+
+.pl-220 {
+  padding-left: 220px;
+}
+
+.pr-185 {
+  padding-right: 185px;
 }
 
 header {
@@ -430,5 +474,530 @@ header #site-title {
     line-height: 2.65;
     letter-spacing: 0.4em;
   }
+}
+
+#service {
+  padding: 50px 0;
+}
+
+@media screen and (min-width: 900px) {
+  #service {
+    padding-top: 80px;
+  }
+}
+
+.service:first-of-type {
+  margin-top: 43px;
+}
+
+.service:not(:first-of-type) {
+  margin-top: 50px;
+}
+
+.service-img-obj {
+  width: 100%;
+  height: auto;
+}
+
+.service-img-title {
+  font-size: 1.6rem;
+  margin-top: 5px;
+}
+
+.service-description {
+  padding-top: 4px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-bottom: 15px;
+  margin-top: 6px;
+}
+
+.service-description-heading {
+  margin-top: 10px;
+  font-size: 2rem;
+  line-height: 1.65;
+  font-weight: 600;
+}
+
+.service-description-detail {
+  margin-top: 5px;
+  font-size: 1.6rem;
+  line-height: 1.5625;
+}
+
+@media screen and (min-width: 900px) {
+  .service {
+    position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .service:first-of-type {
+    margin-top: 80px;
+  }
+  .service:not(:first-of-type) {
+    margin-top: 130px;
+  }
+  .service-img {
+    width: 100%;
+    max-width: 600px;
+    z-index: 1;
+  }
+  .service-img-obj {
+    height: auto;
+  }
+  .service-img-title {
+    font-size: 1.6rem;
+    margin-top: 20px;
+  }
+  .service-description {
+    position: absolute;
+    top: 139px;
+    left: 420px;
+    width: 100%;
+    max-width: 500px;
+    padding-top: 34px;
+    padding-bottom: 47px;
+    padding-left: 220px;
+    padding-right: 0;
+    font-weight: 600;
+  }
+  .service-description-heading {
+    font-size: 2.5rem;
+    line-height: 1.5;
+  }
+  .service-description-detail {
+    font-size: 1.6rem;
+    line-height: 1.5625;
+  }
+  .service:nth-child(odd) {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: row-reverse;
+            flex-direction: row-reverse;
+  }
+  .service:nth-child(odd) .service-img-title {
+    text-align: right;
+  }
+  .service:nth-child(odd) .service-description {
+    left: 0;
+    padding-left: 40px;
+    padding-right: 185px;
+  }
+}
+
+#works {
+  padding: 50px 0;
+}
+
+.works {
+  margin-top: 46px;
+}
+
+.work:not(:first-of-type) {
+  margin-top: 25px;
+}
+
+.work-img {
+  width: 100%;
+}
+
+.work-img-description {
+  font-size: 1.6rem;
+  line-height: 1.5625;
+  font-weight: 200;
+}
+
+#news {
+  padding: 50px 0;
+}
+
+.news-content {
+  margin-top: 47px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  row-gap: 50px;
+}
+
+.news-content .news-content-info {
+  background-color: #fff;
+}
+
+.news-content .news-content-blog {
+  background-color: #fff;
+}
+
+.news-content .news-header {
+  font-size: 2rem;
+  padding-top: 14px;
+  padding-bottom: 6px;
+  padding-left: 20px;
+}
+
+.news-content .news-row {
+  color: #000;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  padding-top: 16px;
+  padding-bottom: 17px;
+  border-bottom: 1px solid #55A500;
+  width: 87%;
+  margin: 0 auto;
+}
+
+.news-content .news-row .news-date {
+  font-size: 1.6rem;
+}
+
+.news-content .news-row .news-text {
+  font-size: 1.8rem;
+  margin-left: 20px;
+  line-height: 1.38;
+  display: -webkit-box;
+  overflow: hidden;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
+
+.news-content .first-row {
+  padding-top: 27px;
+}
+
+.news-content .news-footer {
+  position: relative;
+  height: 74px;
+}
+
+.news-content .news-footer p {
+  position: absolute;
+  bottom: 31px;
+  right: 55px;
+  color: #55A500;
+  font-size: 2rem;
+}
+
+.news-content .news-footer img {
+  position: absolute;
+  bottom: 22px;
+  right: 20px;
+}
+
+#company {
+  padding: 50px 0;
+}
+
+.access-map {
+  padding-top: 56.25%;
+  position: relative;
+}
+
+.access-map iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.company-contents {
+  margin-top: 50px;
+}
+
+.company-description {
+  margin-top: 20px;
+  padding: 20px;
+}
+
+.company-name {
+  font-size: 2rem;
+  font-weight: 600;
+  line-height: 1.65;
+  margin-top: 20px;
+}
+
+.company-address {
+  font-size: 1.6rem;
+  font-weight: 600;
+  line-height: 1.5625;
+  margin-top: 20px;
+}
+
+.company-phone-number {
+  margin-top: 20px;
+  font-size: 1.6rem;
+}
+
+.company-email {
+  margin-top: 20px;
+  font-size: 1.6rem;
+}
+
+.strong {
+  font-size: 2rem;
+  font-weight: 600;
+}
+
+#contact {
+  padding: 50px 0;
+}
+
+.contact-description {
+  margin-top: 50px;
+  margin-bottom: 10px;
+  font-size: 2rem;
+  line-height: 1.65;
+}
+
+.contact-form {
+  font-size: 20px;
+}
+
+.contact-form .form-control {
+  margin-top: 40px;
+}
+
+.contact-form .form-control-sex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: 40px;
+}
+
+.contact-form .radio-form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-left: 50px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.contact-form .radio-form label {
+  padding-left: 50px;
+  position: relative;
+}
+
+.contact-form .radio-form label::before, .contact-form .radio-form label::after {
+  content: '';
+  display: block;
+  border-radius: 50%;
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+}
+
+.contact-form .radio-form label::before {
+  background-color: #fff;
+  border: 1px solid #808000;
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  left: 10px;
+}
+
+.contact-form .radio-form label::after {
+  background-color: #000;
+  border-radius: 50%;
+  opacity: 0;
+  width: 5px;
+  height: 5px;
+  left: 17px;
+}
+
+.contact-form .radio-form input:checked + label::after {
+  opacity: 1;
+}
+
+.contact-form input[type=text] {
+  background-color: #fff;
+  width: 100%;
+  padding-top: 17px;
+  padding-left: 20px;
+  padding-bottom: 17px;
+}
+
+.contact-form input[type=radio] {
+  margin-left: 30px;
+}
+
+.contact-form label {
+  display: block;
+  margin-bottom: 10px;
+}
+
+.contact-form select {
+  width: 100%;
+  background-color: #fff;
+  padding-top: 17px;
+  padding-left: 20px;
+  padding-bottom: 17px;
+  background-image: url(../images/triangle.svg);
+  background-position: right 10px top 50%;
+}
+
+.contact-form textarea {
+  background-color: #fff;
+  width: 100%;
+  height: 200px;
+  padding-top: 17px;
+  padding-left: 20px;
+  padding-bottom: 17px;
+}
+
+.contact-form input[type='checkbox'] {
+  -webkit-transform: scale(1.5);
+          transform: scale(1.5);
+}
+
+.contact-form .checkbox-form {
+  font-size: 1.6rem;
+  line-height: 2.0625;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.contact-form .checkbox-form label {
+  margin-bottom: 0;
+}
+
+.contact-form .checkbox-control {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-column-gap: 10px;
+          column-gap: 10px;
+  row-gap: 10px;
+  width: 50%;
+}
+
+.contact-form .personal-information-protection {
+  background-color: #fff;
+  padding: 30px;
+  padding-right: 50px;
+  height: 310px;
+  overflow-y: auto;
+}
+
+.contact-form .personal-information-protection h4 {
+  font-weight: 200;
+  font-size: 2rem;
+}
+
+.contact-form .personal-information-protection p {
+  font-size: 1.8rem;
+}
+
+.btn {
+  width: 100%;
+  margin-top: 50px;
+  padding: 15px 68px;
+}
+
+.visually-hidden {
+  /* コンテンツの流れから切り離す */
+  position: absolute;
+  /* 誤ったコードに対処するための回避策 */
+  white-space: nowrap;
+  /* 可能な限り文字サイズを小さくするための処理
+   * (スクリーンリーダー中には height と width が 0 のものを無視するため)
+   */
+  width: 1px;
+  height: 1px;
+  /* オーバーフローしているコンテンツを隠す */
+  overflow: hidden;
+  /* 要素サイズを変更しうるプロパティのリセット */
+  border: 0;
+  padding: 0;
+  /* 要素のどの部分が表示されるかを定義するもの */
+  /* 古いブラウザでは使用できない */
+  clip: rect(0 0 0 0);
+  /* 最近のブラウザ用
+   * コンテンツを非表示にする設定  */
+  -webkit-clip-path: inset(50%);
+          clip-path: inset(50%);
+  /* 今現在なぜ-1pxがここで設定されるかは分かっていないそうです。
+   * それに加えていくつか問題もあるそうです 
+   * (参考: https://github.com/h5bp/html5-boilerplate/issues/1985)
+   */
+  margin: -1px;
+}
+
+footer .company-name {
+  font-size: 2rem;
+  font-weight: 200;
+  width: 100%;
+  text-align: center;
+  padding-bottom: 30px;
+  border-bottom: 1px solid #000;
+}
+
+footer .footer-menu {
+  font-size: 1.8rem;
+}
+
+footer .footer-menu ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+footer .footer-menu ul li:not(:first-of-type) {
+  margin-left: 30px;
+}
+
+footer .footer-menu ul li a {
+  display: inline-block;
+  width: 100%;
+}
+
+footer .sns-icon-list {
+  width: 100%;
+  max-width: 200px;
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-top: 40px;
+}
+
+footer .copy-right {
+  margin-top: 50px;
+  font-size: 2rem;
+  text-align: center;
+  padding-top: 24px;
+  padding-right: 30px;
+  padding-bottom: 23px;
+  padding-left: 24px;
 }
 /*# sourceMappingURL=style.css.map */
