--- a/RealEstate/css/style.css
+++ b/RealEstate/css/style.css
@@ -956,6 +956,7 @@ footer .company-name {
 
 footer .footer-menu {
   font-size: 1.8rem;
+  margin: 0 auto;
 }
 
 footer .footer-menu ul {
@@ -964,10 +965,11 @@ footer .footer-menu ul {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-}
-
-footer .footer-menu ul li:not(:first-of-type) {
-  margin-left: 30px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-column-gap: 30px;
+          column-gap: 30px;
 }
 
 footer .footer-menu ul li a {
