--- a/RealEstate/css/style.scss
+++ b/RealEstate/css/style.scss
@@ -779,13 +779,13 @@ footer{
   }
   .footer-menu{
     font-size: 1.8rem;
+    margin: 0 auto;
     ul{
       display: flex;
       flex-wrap: wrap;
+      justify-content: center;
+      column-gap: 30px;
       li{
-        &:not(:first-of-type){
-          margin-left: 30px;
-        }
         a{
           display: inline-block;
           width:100%;
