--- a/RealEstate/css/style.css
+++ b/RealEstate/css/style.css
@@ -97,6 +97,7 @@ a {
 
 .wrapper {
   margin: 0 30px;
+  margin: 0 auto;
 }
 
 @media screen and (min-width: 600px) {
@@ -141,24 +142,27 @@ a {
   }
 }
 
-.to-top::before {
+.to-top {
+  display: none;
   position: fixed;
   right: 60px;
   bottom: 60px;
+  background-color: #4d9600;
   width: 68px;
   height: 68px;
   border-radius: 50%;
-  background-color: #4d9600;
 }
 
-.to-top::after {
-  left: 3px;
-  width: 3px;
-  height: 3px;
-  border-top: 1px solid #fff;
-  border-right: 1px solid #fff;
-  -webkit-transform: rotate(45deg);
-          transform: rotate(45deg);
+.arrow {
+  position: absolute;
+  top: 60%;
+  left: 50%;
+  -webkit-transform: translateX(-50%) translateY(-50%) rotate(-45deg);
+          transform: translateX(-50%) translateY(-50%) rotate(-45deg);
+  width: 25px;
+  height: 25px;
+  border-top: 5px solid #fff;
+  border-right: 5px solid #fff;
 }
 
 header {
@@ -501,11 +505,23 @@ header #site-title {
 
 @media screen and (min-width: 600px) {
   .about-heading {
-    margin-right: 438px;
+    margin-right: 20%;
     margin-top: 0;
     font-size: 3rem;
     line-height: 1.17;
     letter-spacing: 0.17em;
+  }
+}
+
+@media screen and (min-width: 900px) {
+  .about-heading {
+    margin-right: 40%;
+  }
+}
+
+@media screen and (min-width: 1080px) {
+  .about-heading {
+    margin-right: 438px;
   }
 }
 
