--- a/RealEstate/css/style.scss
+++ b/RealEstate/css/style.scss
@@ -61,6 +61,9 @@ a{
   letter-spacing: 0.35em;
   text-align: center;
   margin-left: 7px;
+  @include mq(xl){
+    margin-left: 10px;
+  }
 }
 .section-sub-title{
   text-align: center;
@@ -76,7 +79,7 @@ a{
   line-height: 1.65;
 }
 .wrapper{
-  margin: 0 30px;
+  padding: 0 30px;
   margin: 0 auto;
   @include mq(md){
     max-width: 1080px;
@@ -151,7 +154,7 @@ header {
   @include mq(xl){
     padding : {
       left: 80px;
-      right:105px;
+      right:94px;
     }
   }
 }
@@ -282,7 +285,7 @@ header {
   text-align: center;
   position: absolute;
   top:35%;
-  left:51.1%;
+  left:50.7%;
   transform: translateX(-50%);
   line-height: 2;
   letter-spacing: 0.3em;
@@ -365,6 +368,7 @@ header {
       row-gap: 0;
       column-gap: 41px;
       padding-top: 112px;
+      margin-left: 150px;
     }
   }
   &-heading{
@@ -376,7 +380,7 @@ header {
     line-height: 1.2;
     letter-spacing: 0.2em;
     @include mq(md){
-      margin-right: 20%;
+      margin-right: 10%;
       margin-top: 0;
       font-size: 3rem;
       line-height: 1.17;
@@ -386,7 +390,7 @@ header {
       margin-right: 40%;
     }
     @include mq(xl){
-      margin-right: 438px;
+      margin-right: 385px;
     }
   }
   &-message{
@@ -405,11 +409,13 @@ header {
 // service
 #service{
   padding: 50px 0;
-  @include mq(ll){
-    padding-top: 80px;
+  @include mq(xl){
+    padding: 77px 0;
+    height: 1615px;
   }
 }
 .service{
+  width:100%;
   &:first-of-type{
     margin-top: 43px;
   }
@@ -431,7 +437,7 @@ header {
       top:4px;
       left:20px;
       right: 20px;
-      bottom:15px;
+      bottom:7px;
     }
     margin-top: 6px;
     &-heading{
@@ -443,20 +449,22 @@ header {
     &-detail{
       margin-top: 5px;
       font-size: 1.6rem;
-      line-height: 1.5625;
+      line-height: 1.7625;
     }
   }
 }
-@include mq(ll){
+@include mq(xl){
   .service{
-    &:first-of-type{
-      margin-top: 80px;
-    }
-    &:not(:first-of-type){
-      margin-top:130px;
-    }
     position: relative;
     display: flex;
+    padding-left: 29px;
+    padding-top: 80px;
+    &:first-of-type{
+      margin-top: 0;
+    }
+    &:not(:first-of-type){
+      margin-top:53px;
+    }
     &-img{
       width:100%;
       max-width: 600px;
@@ -466,14 +474,15 @@ header {
       }
       &-title{
         font-size: 1.6rem;
-        margin-top: 20px;
+        margin-top: 19px;
       }
     }
     &-description{
       position:absolute;
-      top:139px;
-      left:420px;
-      width:100%;
+      // top:139px;
+      top: 222px;
+      left: 450px;
+      width: 100%;
       max-width: 500px;
       padding: {
         top:34px;
@@ -484,20 +493,23 @@ header {
       font-weight: 600;
       &-heading{
         font-size: 2.5rem;
-        line-height: 1.5;
+        line-height: 1.4;
       }
       &-detail{
         font-size: 1.6rem;
         line-height: 1.5625;
+        margin-top: 14px;
       }
     }
     &:nth-child(odd){
       flex-direction: row-reverse;
+      // padding-right: 14px;
+      padding-right: 31px;
       .service-img-title{
         text-align: right;
       }
       .service-description{
-        left:0;
+        left:30px;
         padding-left:40px;
         padding-right: 185px;
       }
@@ -507,6 +519,10 @@ header {
 // works
 #works{
   padding:50px 0;
+  @include mq(xl){
+    padding-top:80px;
+    padding-bottom: 73px;
+  }
 }
 .works{
   margin-top: 46px;
@@ -514,12 +530,14 @@ header {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     column-gap: 40px;
+    margin-top: 71px;
+    padding: 0 30px;
   }
 }
 .work{
   cursor: pointer;
   &:not(:first-of-type){
-    margin-top: 25px;
+    margin-top: 29px;
     @include mq(ll){
       margin-top: 0;
     }
@@ -578,15 +596,20 @@ header {
 // news
 #news{
   padding: 50px 0;
+  @include mq(xl){
+    padding: 80px 0;
+  }
 }
 .news-content{
   margin-top: 47px;
   display: flex;
   flex-direction: column;
-  row-gap:50px;
+  row-gap:45px;
   @include mq(ll){
     flex-direction: row;
     column-gap: 60px;
+    padding: 0 30px;
+    margin-top: 75px;
   }
   .news-content-info{
     background-color: #fff;
@@ -620,6 +643,9 @@ header {
     border-bottom: 1px solid #55A500;
     width:87%;
     margin: 0 auto;
+    @include mq(xl){
+      width:90.9%;
+    }
     .news-date{
       font-size: 1.6rem;
     }
@@ -677,13 +703,29 @@ header {
 // company
 #company{
   padding: 50px 0;
+  @include mq(xl){
+    padding: 80px 0;
+    height: 765px;
+  }
+}
+.company-contents{
+  margin-top: 44px;
+  @include mq(ll){
+    display: flex;
+    position: relative;
+    margin-top: 70px;
+    margin-left: 32px;
+  }
 }
 .access-map {
   padding-top: 56.25%;
+  min-width: 315px;
+  min-height: 300px;
   position: relative;
   @include mq(ll){
     width: 600px;
     height: 400px;
+    // padding-top: 0;
   }
   iframe {
     position: absolute;
@@ -693,23 +735,18 @@ header {
     height: 100%;
   }
 }
-.company-contents{
-  margin-top: 50px;
-  @include mq(ll){
-    display: flex;
-    position: relative;
-  }
-}
 .company-description{
   margin-top: 20px;
-  padding: 20px;
+  padding: 20px{
+    top: 11px;
+  };
   @include mq(ll){
     position: absolute;
-    top: 200px;
+    top: 181px;
     left: 420px;
     width: 500px;
     padding: {
-      top: 50px;
+      top: 23px;
       bottom: 50px;
       left: 220px;
     }
@@ -721,37 +758,53 @@ header {
     font-size: 2rem;
     font-weight: 600;
     line-height: 1.65;
-    margin-top: 20px;
+    @include mq(ll){
+      margin-top: 20px;
+    }
   }
   &-address{
     font-size:1.6rem;
     font-weight: 600;
     line-height: 1.5625;
-    margin-top: 20px;
+    margin-top: 8px;
+    @include mq(ll){
+      margin-top: 20px;
+    }
   }
   &-phone-number{
-    margin-top: 20px;
+    margin-top: 11px;
     font-size: 1.6rem;
+    @include mq(ll){
+      margin-top: 10px;
+    }
   }
   &-email{
-    margin-top: 20px;
+    margin-top: 8px;
     font-size: 1.6rem;
+    letter-spacing: 0.015em;
+    @include mq(ll){
+      margin-top: 8px;
+    }
   }
 }
 .strong{
-  font-size: 2rem;
+  font-size: 2.5rem;
   font-weight: 600;
 }
 // contact
 #contact{
   padding: 50px 0;
+  @include mq(ll){
+    padding: 80px 0;
+  }
 }
 .contact-description{
-  margin-top: 50px;
+  margin-top: 33px;
   margin-bottom: 10px;
   font-size: 2rem;
   line-height: 1.65;
   @include mq(ll){
+    margin-top: 35px;
     padding: {
       left: 91px;
       right: 89px;
@@ -759,7 +812,7 @@ header {
   }
 }
 .contact-form{
-  font-size: 20px;
+  font-size: 2rem;
   @include mq(ll){
     padding: {
       left: 91px;
@@ -773,33 +826,53 @@ header {
       column-gap: 23px;
     }
   }
+  .form-control-name{
+    margin-top:40px;
+    @include mq(ll){
+      margin-top: 74px;
+      display: flex;
+      column-gap: 11px;
+      align-items: center;
+    }
+    label{
+      @include mq(ll){
+        margin-top: 7px;
+      }
+    }
+    input[type=text]{
+      font-size: 1.5rem;
+      @include mq(ll){
+        padding: 12px 0{
+          left: 21px;
+        }
+        letter-spacing: 0.1em;
+      }
+    }
+  }
   .form-control-sex{
     display: flex;
-    margin-top: 40px;
-  }
-  .form-control-textarea{
-    margin-top: 50px;
-    display: flex;
-    flex-direction: column;
-    row-gap: 20px;;
-  }
-  .form-control-checkbox{
-    display: flex;
-    flex-direction: column;
-    margin-top: 50px;
-  }
-  .form-control-protection{
-    display: flex;
-    flex-direction: column;
-    margin-top: 50px;
-  }
+    margin-top: 24px;
+    column-gap: 40px;
+    @include mq(ll){
+      align-items: flex-start;
+      margin-top: 50px;
+    }
   .radio-form{
     display: flex;
-    margin-left: 50px;
     align-items: center;
+    column-gap: 25px;
+    @include mq(ll){
+      margin-left: 5px;
+      margin-top: -4px;
+    }
     label{
+      font-size: 1.7rem;
       padding-left: 50px;
       position:relative;
+      @include mq(ll){
+        width: 148px;
+        line-height: 1.84;
+      }
       // ボタンパーツ
       &::before,&::after{
         // ボタンパーツ
@@ -831,6 +904,98 @@ header {
       opacity: 1;
     }
   }
+  }
+  .form-control-email{
+    margin-top:18px;
+    @include mq(ll){
+      display: flex;
+      column-gap: 23px;
+      margin-top: 38px;
+      align-items: center;
+    }
+    label{
+      @include mq(ll){
+        letter-spacing: -0.05em;
+      }
+    }
+    input[type=email]{
+      background-color: #fff;
+      padding-top: 9px;
+      padding-bottom: 9px;
+      padding-left: 18px;
+      font-size: 1.7rem;
+      width: 100%;
+      @include mq(ll){
+        padding: 12px 0{
+          left: 17px;
+        }
+        letter-spacing: 0.05em;
+        width: 663px;
+        font-size: 1.5rem;
+        margin-top: -6px;
+      }
+    }
+  }
+  .form-control-type{
+    margin-top:36px;
+    @include mq(ll){
+      display: flex;
+      column-gap: 23px;
+      margin-top: 54px;
+      align-items: center;
+    }
+    label{
+      @include mq(ll){
+        // letter-spacing: -0.05em;
+      }
+    }
+    select{
+      background-color: #fff;
+      background: {
+        image:url(../images/triangle.svg);
+        position: right 18px top 50%;
+      }
+      padding: 13px 0{
+        left: 20px;
+      }
+      width:100%;
+      font-size: 1.6rem;
+      @include mq(ll){
+        padding: 19px 0{
+          left: 17px;
+        }
+        width: 663px;
+        font-size: 1.8rem;
+        margin-top: -6px;
+        background-position: right 21px top 50%;
+      }
+    }
+  }
+  .form-control-textarea{
+    margin-top: 39px;
+    display: flex;
+    flex-direction: column;
+    row-gap: 0;
+    @include mq(ll){
+      row-gap: 0;
+    }
+  }
+  .form-control-checkbox{
+    display: flex;
+    flex-direction: column;
+    margin-top: 29px;
+    @include mq(ll){
+      margin-top: 44px;
+    }
+  }
+  .form-control-protection{
+    display: flex;
+    flex-direction: column;
+    margin-top: 29px;
+    @include mq(ll){
+      margin-top: 45px;
+    }
+  }
   input[type=text]{
     background-color: #fff;
     width:100%;
@@ -856,25 +1021,10 @@ header {
   }
   .question-lbl{
     width:100%;
+    margin-bottom: 0;
   }
   .protection-lbl{
     width: 100%;
-  }
-  select{
-    width:100%;
-    @include mq(ll){
-      width: 630px;
-    }
-    background-color: #fff;
-    padding: {
-      top: 17px;
-      left: 20px;
-      bottom: 17px;
-    }
-    background: {
-      image:url(../images/triangle.svg);
-      position: right 10px top 50%;
-    }
   }
   textarea{
     background-color: #fff;
@@ -888,58 +1038,102 @@ header {
   }
   input[type='checkbox']{
     transform: scale(1.5);
+    border:none;
+    @include mq(ll){
+      transform: scale(1.8);
+      margin-left: 4px;
+    }
   }
   .checkbox{
     &-form{
       font-size: 1.6rem;
-      line-height: 2.0625;
+      line-height: 1.8;
       display: flex;
       flex-wrap: wrap;
       justify-content: space-between;
-      label{
-        margin-bottom: 0;
+      row-gap: 1px;
+      @include mq(ll){
+        line-height: 2.0625;
       }
     }
     &-control{
       display: flex;
       align-items: center;
-      column-gap: 10px;
+      column-gap: 17px;
       row-gap: 10px;
       width:50%;
       @include mq(ll){
         width: 25%;
+        column-gap: 28px;
+        font-size: 1.8rem;
+      }
+      label{
+        margin-bottom: 0;
+        @include mq(ll){
+          margin-left: -6px;
+          margin-top: -4px;
+        }
       }
     }
   }
   .personal-information-protection{
     background-color: #fff;
-    padding: 30px {
+    padding: {
+      top: 22px;
+      bottom: 30px;
+      left: 30px;
       right: 50px;
     }
     height: 310px;
     overflow-y: auto;
+    @include mq(ll){
+      padding-top: 35px;
+      padding-left: 39px;
+      padding-right: 52px;
+      padding-right: 63px;
+      letter-spacing: -0.05em;
+    }
     h4{
       font-weight: 200;
-      font-size: 2rem;
+      font-size: 1.8rem;
+      line-height: 1.7;
+      &:not(:first-of-type){
+        margin-top: 10px;
+      }
+      @include mq(ll){
+        font-size: 1.9rem;
+        line-height: 1.6;
+      }
     }
     p{
-      font-size: 1.8rem;
+      font-size: 1.6rem;
+      margin-top: 5px;
+      line-height: 1.8;
+        @include mq(ll){
+        font-size: 1.8rem;
+        line-height: 1.9;
+        font-size: 1.7rem;
+      }
     }
   }
 }
 .btn{
   width: 100%;
-  margin-top: 50px;
-  padding:15px 68px;
+  margin-top: 46px;
+  padding:10px 68px;
   transition: .5s;
   @include mq(ll){
     width:100%;
     max-width: 300px;
     display: block;
     margin: {
+      top:73px;
       left: auto;
       right: auto;
     }
+    padding-top: 10px;
+    padding-left: 60px;
+    padding-bottom: 10px;
   }
   &:hover{
     border: solid 1px $cGreen;
@@ -979,33 +1173,45 @@ header {
 // footer
 footer{
   .footer-wrapper{
-    padding: 0 16%;
+    padding: 0 7.4%;
     max-width: 1080px;
     margin: 0 auto;
+    @include mq(ll){
+      padding: {
+        left:141px;
+        right:139px;
+      }
+    }
   }
   .company-name{
     font-size: 2rem;
     font-weight: 200;
     width:100%;
+    margin-top: 43px;
+    margin-left: auto;
+    margin-right: auto;
     text-align: center;
-    padding-bottom: 30px;
+    padding-bottom: 23px;
     border-bottom: 1px solid #000;
     @include mq(ll){
-      margin-top: 80px;
-      padding-bottom: 40px;
+      margin-top: 75px;
+      padding-bottom: 31px;
     }
   }
   .footer-menu{
     font-size: 1.8rem;
     margin: 0 auto;
+    margin-top: 25px;
     @include mq(ll){
-      margin-top: 30px;
+      margin-top: 25px;
+      padding: 0 10px;
     }
     ul{
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
       column-gap: 30px;
+      row-gap: 11px;
       @include mq(ll){
         justify-content: space-between;
       }
@@ -1028,11 +1234,15 @@ footer{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-top: 40px;
+    margin-top: 33px;
+    @include mq(ll){
+      margin-top: 40px;
+    }
   }
   .footer-flex{
     display: flex;
     flex-direction: column;
+    line-height: 1.3;
     @include mq(ll){
       flex-direction: row;
       justify-content: center;
@@ -1040,20 +1250,21 @@ footer{
     }
   }
   .copy-right{
-    margin-top: 50px;
+    margin-top: 44px;
     font-size: 2rem;
     text-align: center;
     padding: {
-      top:24px;
+      top:19px;
       right:30px;
       bottom:23px;
       left:24px;
     }
     @include mq(ll){
       padding: 0{
-        top:35px;
+        top:31px;
         bottom:34px;
       }
+      margin-top: 71px;
     }
   }
 }
